# HSE_Symbolic_Differentiation

./: CMakeLists.txt  Makefile
include/: Expression.hpp  parser.hpp
src/: Expression.cpp  differentiator.cpp  operations.cpp  parser.cpp
tests/: tests.cpp
